--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,8 @@
 .header {
   height: 90vh;
-  background-color: #1d1d1d;
-  background-image: url("/img/modern-exteriors-4.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/modern-exteriors-4.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/modern-exteriors-4.jpg);
+  background-size: cover;
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center center;
@@ -47,6 +48,18 @@
   padding: 10px;
 }
 
+.tag-line {
+  font-size: 50px;
+  color: white;
+  width: 400px;
+  font-family: "Titillium Web", sans-serif;
+  letter-spacing: 1px;
+}
+
+.tagContent {
+  font-size: 19px;
+}
+
 .header-con {
   width: 100%;
   height: 500px;
@@ -60,6 +73,10 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .input {
@@ -110,6 +127,66 @@
   width: 100px;
 }
 
+@media (max-width: 319px) {
+  .header-content {
+    padding: 0;
+    height: 250px;
+    width: 100%;
+  }
+  .input {
+    height: 40px;
+    font-size: 13px;
+  }
+  .input:nth-child(3) {
+    width: 244px;
+    border-radius: 7px;
+  }
+  .propertyType {
+    border-radius: 0px 7px 7px 0px;
+  }
+  .header-con {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .header {
+    display: block;
+    padding: 0;
+  }
+  .tag-line {
+    font-size: 50px;
+    color: white;
+    width: 100%;
+    font-family: "Titillium Web", sans-serif;
+    letter-spacing: 1px;
+  }
+  .tag-line {
+    font-size: 30px;
+  }
+  .tagContent {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 393px) {
+  .header-content {
+    padding: 0px;
+    height: 210px;
+  }
+  .input:nth-child(3) {
+    width: 160px;
+  }
+  .header {
+    padding: 10px;
+  }
+  .tag-line {
+    font-size: 32px;
+  }
+  .tagContent {
+    font-size: 16px;
+  }
+}
+
 @media (min-width: 320px) {
   .header-content {
     padding: 0;
@@ -136,6 +213,19 @@
     display: block;
     padding: 0;
   }
+  .tag-line {
+    font-size: 50px;
+    color: white;
+    width: 100%;
+    font-family: "Titillium Web", sans-serif;
+    letter-spacing: 1px;
+  }
+  .tag-line {
+    font-size: 30px;
+  }
+  .tagContent {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 393px) {
@@ -149,11 +239,20 @@
   .header {
     padding: 10px;
   }
+  .tag-line {
+    font-size: 32px;
+  }
+  .tagContent {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 483px) {
   .input:nth-child(3) {
     width: 240px;
+  }
+  .tag-line {
+    width: 100%;
   }
 }
 
@@ -180,6 +279,16 @@
   .input {
     height: 50px;
     font-size: 16px;
+  }
+  .tag-line {
+    font-size: 50px;
+    color: white;
+    width: 600px;
+    font-family: "Titillium Web", sans-serif;
+    letter-spacing: 1px;
+  }
+  .tagContent {
+    font-size: 19px;
   }
 }
 /*# sourceMappingURL=header.css.map */
