--- a/css/header.scss
+++ b/css/header.scss
@@ -4,13 +4,19 @@ $font-size-mobile:16px;
 $font-size-desktop:20px;
 $containerpadding:20px;
 $containerWidth:100%;
+$taglineFontSize:50px;
+$tagContentFontSize:19px;
 $mainfont:'Titillium Web',
 sans-serif;
 
+
 .header{
     height: 90vh;
-    background-color:#1d1d1d;
-    background-image: url("/img/modern-exteriors-4.jpg");
+    background-image:
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/modern-exteriors-4.jpg);
+  background-size: cover;
+ 
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center center;
@@ -22,6 +28,7 @@ sans-serif;
     font-size: $font-size-desktop;
     font-family: $mainfont;
     padding: $containerpadding;
+    
 }
 .header-content{
     width: auto;
@@ -38,6 +45,16 @@ sans-serif;
     color:#1d1d1d;
     padding: 10px;
 }
+.tag-line{
+    font-size: $taglineFontSize;
+    color: white;
+    width: 400px;
+    font-family: $mainfont;
+    letter-spacing: 1px;
+}
+.tagContent{
+    font-size: $tagContentFontSize;
+}
 .header-con{
     width: 100%;
     height: 500px;
@@ -45,6 +62,7 @@ sans-serif;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    flex-direction: column;
 }
 .input{
     width: 300px;
@@ -84,6 +102,70 @@ sans-serif;
     border-radius: unset;
     width: 100px;
 }
+
+@media(max-width:319px){
+    .header-content{
+        padding: 0;
+        height: 250px;
+        width: 100%;
+    }
+    .input{
+        height: 40px;
+        font-size: 13px;
+    }
+    .input:nth-child(3){
+        width: 244px;
+        border-radius: 7px;
+    }
+    .propertyType{
+        border-radius: 0px 7px 7px 0px;
+    }
+    .header-con{
+        width: 100%;
+        height: auto;
+        display: block; 
+    }
+    .header{
+        display: block;
+        padding: 0;
+    }
+    .tag-line{
+        font-size: $taglineFontSize;
+        color: white;
+        width: 100%;
+        font-family: $mainfont;
+        letter-spacing: 1px;
+    }
+    .tag-line{
+        font-size: 30px;
+    }
+    .tagContent{
+        font-size: 14px;
+    }
+   
+   
+}
+
+@media(min-width:393px){
+    .header-content{
+        padding: 0px;
+        height: 210px;
+    }
+    .input:nth-child(3){
+        width: 160px;
+    }
+    .header{
+        padding: 10px;
+    }
+    .tag-line{
+        font-size: 32px;
+    }
+    .tagContent{
+        font-size: 16px;
+    }
+    
+}
+
 @media(min-width:320px){
     .header-content{
         padding: 0;
@@ -110,6 +192,19 @@ sans-serif;
         display: block;
         padding: 0;
     }
+    .tag-line{
+        font-size: $taglineFontSize;
+        color: white;
+        width: 100%;
+        font-family: $mainfont;
+        letter-spacing: 1px;
+    }
+    .tag-line{
+        font-size: 30px;
+    }
+    .tagContent{
+        font-size: 14px;
+    }
    
 }
 
@@ -124,12 +219,21 @@ sans-serif;
     .header{
         padding: 10px;
     }
+    .tag-line{
+        font-size: 32px;
+    }
+    .tagContent{
+        font-size: 16px;
+    }
     
 }
 
 @media(min-width:483px){
     .input:nth-child(3){
         width: 240px;
+    }
+    .tag-line{
+        width: 100%;
     }
 }
 @media(min-width:1200px){
@@ -153,4 +257,15 @@ sans-serif;
         height: 50px;
         font-size: 16px;
     }
+    .tag-line{
+        font-size: $taglineFontSize;
+        color: white;
+        width: 600px;
+        font-family: $mainfont;
+        letter-spacing: 1px;
+    }
+    .tagContent{
+        font-size: 19px;
+    }
+    
 }
