--- a/css/Featured.css
+++ b/css/Featured.css
@@ -1,12 +1,13 @@
 .featured-container {
   width: 100%;
   height: 100vh;
-  padding: 20px;
+  padding: 30px;
   text-align: center;
   font-size: 20px;
   font-family: "Titillium Web", sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
+  background-color: #ffffff;
 }
 
 .featured-container p {
@@ -43,6 +44,7 @@
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
   cursor: pointer;
+  background-color: white;
 }
 
 .project:hover {
@@ -58,6 +60,7 @@
   opacity: 0.8;
   text-align: left;
   margin: 10px;
+  font-weight: 500;
 }
 
 .project img {
@@ -87,13 +90,18 @@
   .featured-container {
     padding-left: 7px;
     padding-right: 7px;
+    height: auto;
   }
   .featured-container h1 {
     font-size: 20px;
+    font-weight: 100;
   }
   .featured-container p {
     font-size: 16px;
     opacity: 0.7;
+  }
+  .latestProject {
+    height: auto;
   }
 }
 
@@ -104,6 +112,7 @@
     padding: 5px;
     padding-top: 10px;
     grid-gap: 20px;
+    height: auto;
   }
   .project {
     width: 100%;
@@ -111,9 +120,12 @@
   .featured-container {
     padding-left: 7px;
     padding-right: 7px;
+    height: auto;
   }
   .featured-container h1 {
     font-size: 20px;
+    font-weight: 100;
+    opacity: 0.8;
   }
   .featured-container p {
     font-size: 16px;
@@ -164,7 +176,12 @@
     grid-gap: 20px;
   }
   .featured-container h1 {
-    font-size: 25px;
+    font-size: 29px;
+    font-weight: 400;
+    opacity: 0.8;
+  }
+  .featured-container {
+    height: auto;
   }
 }
 /*# sourceMappingURL=Featured.css.map */
