--- a/css/Featured.scss
+++ b/css/Featured.scss
@@ -11,12 +11,14 @@ sans-serif;
 .featured-container{
     width: 100%;
     height: 100vh;
-    padding: $containerpadding;
+    padding: 30px;
     text-align: center;
     font-size: $font-size-desktop;
     font-family: $mainfont;
     font-weight: 400;
     letter-spacing: 1px;
+    background-color: #ffffff;
+   
 }
 .featured-container p{
     font-size: $font-size-mobile;
@@ -25,7 +27,6 @@ sans-serif;
 .latestProject{
     width: 100%;
     height: 85vh;
- 
     padding: $containerpadding;
     display: grid;
     grid-template-columns: auto auto auto;
@@ -43,6 +44,7 @@ sans-serif;
     overflow: hidden; 
     transition: ease-in-out 0.3s;
     cursor: pointer;
+    background-color: white;
 }
 .project:hover{
     transform: scale(0.98);
@@ -55,6 +57,7 @@ sans-serif;
     opacity: 0.8;
     text-align: left;
     margin: 10px;
+    font-weight: 500;
 }
 .project img {
     width: 100%;
@@ -81,13 +84,18 @@ sans-serif;
     .featured-container{
         padding-left: 7px;
         padding-right: 7px;
+        height: auto;
     }
     .featured-container h1{
         font-size: $font-size-desktop;
+        font-weight: 100;
     }
     .featured-container p{
         font-size: $font-size-mobile;
         opacity: 0.7;
+    }
+    .latestProject{
+        height: auto;
     }
 }
 
@@ -97,6 +105,7 @@ sans-serif;
         padding: 5px;
         padding-top: 10px;
         grid-gap:20px;
+        height: auto;
     }
     .project{
         width: 100%;
@@ -104,9 +113,12 @@ sans-serif;
     .featured-container{
         padding-left: 7px;
         padding-right: 7px;
+        height: auto;
     }
     .featured-container h1{
         font-size: $font-size-desktop;
+        font-weight: 100;
+        opacity: 0.8;
     }
     .featured-container p{
         font-size: $font-size-mobile;
@@ -147,6 +159,11 @@ sans-serif;
         grid-gap: 20px;
     }
     .featured-container h1{
-        font-size: 25px;
+        font-size: 29px;
+        font-weight: 400;
+        opacity: 0.8;
     }
+   .featured-container{
+       height: auto;
+   }
 }
