--- a/css/header.css
+++ b/css/header.css
@@ -256,6 +256,12 @@
   }
 }
 
+@media (min-width: 738px) {
+  .header {
+    height: auto;
+  }
+}
+
 @media (min-width: 1200px) {
   .header-content {
     height: 200px;
@@ -275,6 +281,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 90vh;
   }
   .input {
     height: 50px;
