--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,7 @@ footer {
           align-items: center;
   -ms-grid-columns: auto auto auto auto;
       grid-template-columns: auto auto auto auto;
+  border-top: 0.5px solid #1d1d1d81;
 }
 
 .footerImg img {
