--- a/css/footer.scss
+++ b/css/footer.scss
@@ -19,6 +19,7 @@ footer{
    justify-content: space-between;
    align-items: center;
    grid-template-columns: auto auto auto auto;
+   border-top: 0.5px solid #1d1d1d81;
 }
 .footerImg img{
     width: 190px;
