--- a/css/footer.css
+++ b/css/footer.css
@@ -15,7 +15,7 @@ footer {
           align-items: center;
   -ms-grid-columns: auto auto auto auto;
       grid-template-columns: auto auto auto auto;
-  border-top: 0.5px solid #1d1d1d81;
+  border-top: 2px solid #1d1d1d;
 }
 
 .footerImg img {
@@ -105,6 +105,12 @@ footer {
     -ms-grid-columns: auto auto auto auto;
         grid-template-columns: auto auto auto auto;
     height: auto;
+  }
+  .footer-title {
+    font-size: 20px;
+  }
+  .followUs li, .quickLinks li, .newsLetter p {
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=footer.css.map */
