--- a/css/footer.scss
+++ b/css/footer.scss
@@ -19,7 +19,7 @@ footer{
    justify-content: space-between;
    align-items: center;
    grid-template-columns: auto auto auto auto;
-   border-top: 0.5px solid #1d1d1d81;
+   border-top: 2px solid #1d1d1d;
 }
 .footerImg img{
     width: 190px;
@@ -90,5 +90,11 @@ footer{
     footer{
         grid-template-columns: auto auto auto auto;
         height: auto;
+    }
+    .footer-title{
+        font-size: 20px;
+    }
+    .followUs li,.quickLinks li,.newsLetter p{
+        font-size: 16px;
     }
 }
