--- a/css/Featured.scss
+++ b/css/Featured.scss
@@ -109,7 +109,7 @@ sans-serif;
         margin-top: 20px;
     }
     .project{
-       
+       width: 100%;
     }
     .featured-container{
         padding-left: 7px;
@@ -147,6 +147,7 @@ sans-serif;
     .project{
         width: 100%;
     }
+
 }
 @media(min-width:768px){
     .latestProject{
