--- a/css/layout.css
+++ b/css/layout.css
@@ -102,6 +102,12 @@
   }
 }
 
+@media (min-width: 483px) {
+  .card:nth-child(1), .card:nth-child(2), .card:nth-child(3) {
+    background-position: bottom left;
+  }
+}
+
 @media (min-width: 768px) {
   .container {
     display: -webkit-box;
