--- a/css/header.scss
+++ b/css/header.scss
@@ -191,6 +191,7 @@ sans-serif;
         width: 100%;
         height: auto;
         display: block; 
+        padding-top: 10px;
     }
     .header{
         display: block;
