--- a/css/nav.css
+++ b/css/nav.css
@@ -24,6 +24,11 @@ nav {
           box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
+ul a {
+  text-decoration: none !important;
+  color: black;
+}
+
 nav img {
   width: 120px;
   height: 100px;
@@ -48,6 +53,11 @@ nav img {
   font-size: 20px;
   margin: 10px;
   font-weight: 400;
+  cursor: pointer !important;
+}
+
+ul a {
+  text-decoration: none !important;
 }
 
 .user {
@@ -212,6 +222,9 @@ nav img {
 }
 
 @media (min-width: 320px) {
+  ul a {
+    color: white;
+  }
   .hide {
     display: none;
   }
@@ -380,6 +393,9 @@ nav img {
   nav {
     height: 10vh;
   }
+  ul a {
+    color: black;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -429,6 +445,9 @@ nav img {
   }
   .btn-user:nth-child(2) {
     display: inline-block;
+  }
+  ul a {
+    color: black;
   }
 }
 /*# sourceMappingURL=nav.css.map */
