--- a/css/nav.scss
+++ b/css/nav.scss
@@ -25,6 +25,10 @@ nav {
     height: 10vh;
     box-shadow: 0px 2px 2px 0px rgba($color: #000000, $alpha: 0.5);
 }
+ul a{
+    text-decoration: none!important;
+    color: black;
+}
 
 
 nav img {
@@ -46,6 +50,10 @@ nav img {
     font-size: $font-size-desktop;
     margin: 10px;
     font-weight: 400;
+    cursor: pointer!important;
+}
+ul a{
+    text-decoration: none!important;
 }
 
 .user {
@@ -195,6 +203,9 @@ nav img {
 }
 
 @media(min-width:320px) {
+    ul a{
+        color: white;
+    }
     .hide {
         display: none;
     }
@@ -364,6 +375,9 @@ nav img {
     nav{
         height: 10vh;
     }
+    ul a{
+        color: black;
+    }
 
 
 }
@@ -419,6 +433,10 @@ nav img {
     .btn-user:nth-child(2) {
         display: inline-block;
     }
+    ul a{
+        color: black;
+    }
+  
 
 
 }
