--- a/css/commercial/searchProperty.css
+++ b/css/commercial/searchProperty.css
@@ -131,10 +131,31 @@ input[type=text] {
 }
 
 .project-list {
-  width: 350px;
   height: 250px;
-  background-color: black;
+  background-color: white;
   color: white;
+  position: relative;
+  -webkit-box-shadow: 0px 2px 2px 0px;
+          box-shadow: 0px 2px 2px 0px;
+}
+
+.project-list h3 {
+  color: black;
+  position: relative;
+  padding: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.project-list img {
+  width: 100%;
+  position: relative;
+  top: 0;
+  height: 150px;
 }
 
 .pagination a {
@@ -164,10 +185,37 @@ input[type=text] {
   }
   .project-list {
     width: 290px;
-    height: 170px;
+    height: 300px;
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
   }
   .searchbox-content {
     height: auto;
+  }
+  .searchbox-content h1 {
+    margin-top: 10px;
+  }
+  .active {
+    color: dodgerblue !important;
+  }
+  .project-list img {
+    height: 170px;
+  }
+}
+
+@media (min-width: 393px) {
+  .project-list img {
+    height: 160px;
+  }
+}
+
+@media (min-width: 483px) {
+  .project-list {
+    width: 450px;
+    height: 390px;
+  }
+  .project-list img {
+    height: 250px;
   }
 }
 
@@ -176,6 +224,13 @@ input[type=text] {
     -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
     height: auto;
+  }
+  .project-list {
+    width: 360px;
+    height: 360px;
+  }
+  .project-list img {
+    height: 220px;
   }
 }
 
@@ -216,9 +271,12 @@ input[type=text] {
     height: auto;
   }
   .project-list {
-    width: 200px;
-    height: 190px;
-    background-color: black;
+    width: 210px;
+    height: 260px;
+    background-color: white;
+  }
+  .project-list img {
+    height: 120px;
   }
 }
 
@@ -253,8 +311,13 @@ input[type=text] {
   }
   .project-list {
     width: 275px;
-    height: 250px;
-    background-color: black;
+    height: 290px;
+    background-color: white;
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+  }
+  .project-list img {
+    height: 160px;
   }
 }
 /*# sourceMappingURL=searchProperty.css.map */
