--- a/css/commercial/searchProperty.scss
+++ b/css/commercial/searchProperty.scss
@@ -15,6 +15,7 @@ sans-serif;
     position: relative;
   
 }
+
 .searchbox{
     width: 350px;
     height: 90vh;
@@ -102,13 +103,31 @@ input[type=text]{
     flex-direction: column;
 }
 .project-list{
-    width: 350px;
+    
     height: 250px;
-    background-color: black;
+    background-color: white;
     color: white;
+    position: relative;
+    box-shadow: 0px 2px 2px 0px
 }
-.pagination{
+.project-list h3{
+    color: black;
+    position: relative;
+    padding: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-family: $mainfont;
+    font-size: $font-size-mobile;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
+.project-list img{
+    width: 100%;
+    position: relative;
+    top: 0;
+    height: 150px;
+}
+
 .pagination a {
     color: black;
     float: left;
@@ -134,18 +153,49 @@ input[type=text]{
     }
     .project-list{
        width: 290px;
-       height: 170px;
+       height: 300px;
+       box-shadow: 0px 2px 2px 0px rgba($color: #000000, $alpha: 0.2)
     }
     .searchbox-content{
         height: auto;
+    }
+    .searchbox-content h1{
+       margin-top: 10px;
+    }
+    .active{
+        color: dodgerblue!important;
+    }
+    .project-list img{
+        height: 170px;
+    }
+}
+@media(min-width:393px){
+    .project-list img{
+        height: 160px;
+    }
+}
+@media(min-width:483px){
+    .project-list{
+        width: 450px;
+        height: 390px;
+     }
+     .project-list img{
+        height: 250px;
     }
 }
 @media(min-width:768px){
     .search-list{
         grid-template-columns: auto auto;
        height: auto;
-
     }
+    .project-list{
+        width:360px;
+        height: 360px;
+     }
+     .project-list img{
+        height: 220px;
+    }
+    
 }
 @media(min-width:992px){
     .searchbox{
@@ -183,9 +233,12 @@ input[type=text]{
 
     }
     .project-list{
-        width: 200px;
-        height: 190px;
-        background-color: black;
+        width: 210px;
+        height: 260px;
+        background-color: white;
+    }
+    .project-list img{
+        height: 120px;
     }
     
 }
@@ -221,7 +274,11 @@ input[type=text]{
     }
     .project-list{
         width: 275px;
-        height: 250px;
-        background-color: black;
+        height: 290px;
+        background-color: white;
+        box-shadow: 0px 2px 2px 0px rgba($color: #000000, $alpha: 0.2)
+    }
+    .project-list img{
+        height: 160px;
     }
 }
