--- a/css/commercial/searchProperty.css
+++ b/css/commercial/searchProperty.css
@@ -165,6 +165,7 @@ input[type=text] {
   text-decoration: none;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
+  font-family: "Titillium Web", sans-serif;
 }
 
 @media (min-width: 320px) {
@@ -261,7 +262,7 @@ input[type=text] {
   }
   .searchbox-content {
     width: 100%;
-    height: 90vh;
+    height: auto;
     top: 0;
     position: relative;
   }
@@ -293,14 +294,14 @@ input[type=text] {
   }
   .searchbox {
     width: 350px;
-    height: 90vh;
+    height: auto;
     background-color: rgba(128, 128, 128, 0.39);
     position: relative;
     padding: 20px;
   }
   .searchbox-content {
     width: 100%;
-    height: 90vh;
+    height: auto;
     top: 0;
     position: relative;
   }
